--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mistune==3.0.2
 mpmath==1.3.0
+mysqlclient==2.2.1
 nbclient==0.9.0
 nbconvert==7.12.0
 nbdime==4.0.1
